PlaywrightBasePageComponent fixed